--- a/Theme.conf
+++ b/Theme.conf
@@ -6,14 +6,15 @@ ScreenHeight="1080"
 ScreenPadding=""
 # Default 0, Options: from 0 to min(screen width/2,screen height/2). 
 
-Font="arcadeclassic"
+# Font="arcadeclassic"
+Font="SpaceMono Nerd Font"
 FontSize="11"
 # Default is screen height divided by 80 (1080/80=13.5), Options: 0-inf.
 
 KeyboardSize="0.4"
 #  Default 0.4, Options 0.1-1.0
 
-RoundCorners="20"
+RoundCorners="4"
 
 Locale=""
 # Locale for data and time format. I suggest leaving it blank.
@@ -22,7 +23,7 @@ HourFormat="HH:mm"
 DateFormat="dddd d"
 # Default Locale.LongFormat.
 
-HeaderText=""
+HeaderText="おはよう"
 # You can put somehting fun.
 
 #################### Background ####################
@@ -32,7 +33,7 @@ BackgroundPlaceholder=""
 # Background displayed before the actual background is loaded.
 # Use only if the background is a video, otherwise leave blank.
 # Connected with: Background.
-Background="Backgrounds/sagiri.mp4"
+Background="Backgrounds/itachi.mp4"
 # Must be a relative path.
 # Supports: png, jpg, jpeg, webp, gif, avi, mp4, mov, mkv, m4v, webm.
 BackgroundSpeed=""
@@ -61,33 +62,33 @@ BackgroundVerticalAlignment="center"
 
 #################### Colors ####################
 
-HeaderTextColor="#3d495b"
-DateTextColor="#3d495b"
-TimeTextColor="#3d495b"
+HeaderTextColor="#374379"
+DateTextColor="#374379"
+TimeTextColor="#254777"
 
 FormBackgroundColor="#21222C"
 BackgroundColor="#21222C"
 DimBackgroundColor="#21222C"
 
-LoginFieldBackgroundColor="#cccccc"
-PasswordFieldBackgroundColor="#cccccc"
-LoginFieldTextColor="#3d495b"
-PasswordFieldTextColor="#3d495b"
-UserIconColor="#3d495b"
-PasswordIconColor="#3d495b"
+LoginFieldBackgroundColor=" #1D2024"
+PasswordFieldBackgroundColor=" #1D2024"
+LoginFieldTextColor="#D9E3F8"
+PasswordFieldTextColor="#D9E3F8"
+UserIconColor="#3E4758"
+PasswordIconColor="#3E4758"
 
 PlaceholderTextColor="#bbbbbb"
-WarningColor="#3d495b"
+WarningColor="#FFB4AB"
 
 LoginButtonTextColor="#ffffff"
-LoginButtonBackgroundColor="#3d495b"
+LoginButtonBackgroundColor="#563E5D"
 SystemButtonsIconsColor="#3d495b"
 SessionButtonTextColor="#3d495b"
 VirtualKeyboardButtonTextColor="#3d495b"
 
-DropdownTextColor="#ffffff"
-DropdownSelectedBackgroundColor="#697f90"
-DropdownBackgroundColor="#3d495b"
+DropdownTextColor="#D5E3FF"
+DropdownSelectedBackgroundColor="#254777"
+DropdownBackgroundColor="#111318"
 
 HighlightTextColor="#bbbbbb"
 HighlightBackgroundColor="#3d495b"
